--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/uppertools?useTimezone=true&se
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=false
+
+
+#Flayway configs
+flayway.url=jdbc:mysql://localhost:3306
+flayway.schemas=uppertools
+flayway.user=root
+flayway.password=root
