--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ flayway.url=jdbc:mysql://localhost:3306
 flayway.schemas=uppertools
 flayway.user=root
 flayway.password=root
+
+# Jackson Config
+spring.jackson.default-property-inclusion=non_null
